# monty

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  RELEASING.md  open-method.md  pyproject.toml
.claude/: settings.json
.github/actions/build-pgo-wheel/: action.yml
.github/workflows/: ci.yml  codspeed.yml
crates/fuzz/: Cargo.toml
crates/fuzz/fuzz_targets/: string_input_panic.rs  tokens_input_panic.rs
crates/monty/: Cargo.toml  README.md
crates/monty-bench/: Cargo.toml
crates/monty-bench/benches/: main.rs  pool.rs
crates/monty-cli/: Cargo.toml
crates/monty-cli/src/: main.rs  subprocess.rs
crates/monty-cli/tests/: subprocess.rs
crates/monty-cpython/: Cargo.toml  Dockerfile  Dockerfile.dockerignore  README.md  build.rs
crates/monty-cpython/src/: events.rs  install.rs  lib.rs  main.rs  pep_723.rs  pyexec.rs  runner.py  session.rs  traceback.rs  transport.rs
crates/monty-cpython/tests/: pep_723.rs  stdio_session.rs
crates/monty-datatest/: Cargo.toml
crates/monty-datatest/src/: main.rs
crates/monty-fs/: Cargo.toml  README.md
crates/monty-fs/src/: common.rs  direct.rs  dispatch.rs  error.rs  lib.rs  mount_table.rs  overlay.rs
crates/monty-fs/tests/: fs.rs  fs_security.rs
crates/monty-js/: .gitignore  Cargo.toml  README.md  native-addon.d.ts  package-lock.json  package.json  vitest.browser.config.ts  vitest.config.ts
crates/monty-js/__test__/: assertions.ts  async.spec.ts  basic.spec.ts  env.ts  exceptions.spec.ts  external.spec.ts  feed_start.spec.ts  helpers.ts  inputs.spec.ts  install_dependencies.spec.ts  limits.spec.ts  mount.spec.ts  pool.spec.ts  print.spec.ts  public_api.spec.ts  repl.spec.ts  type_check.spec.ts  types.spec.ts  wasm_async.spec.ts  wasm_basic.spec.ts  wasm_exceptions.spec.ts  wasm_external.spec.ts  wasm_inputs.spec.ts  wasm_limits.spec.ts  wasm_mount.spec.ts  wasm_print.spec.ts  wasm_repl.spec.ts  wasm_serialize.spec.ts  wasm_start.spec.ts  wasm_type_check.spec.ts  wasm_types.spec.ts
crates/monty-js/browser-test/: browser.spec.ts
crates/monty-js/scripts/: assemble-packages.mjs  copy-wasm.mjs  create-platform-packages.mjs  patch-native-loader.mjs  smoke-test.sh
crates/monty-js/src/: convert.rs  exceptions.rs  lib.rs  limits.rs  monty_cls.rs  pool.rs
crates/monty-js/test-support/: node-builtins-stub.ts  node-stubs.ts  publicApi.ts
crates/monty-js/ts/: errors.ts  index.ts  mount.ts  native.ts  node.ts  pool.ts  print.ts  session.ts
crates/monty-macros/: Cargo.toml  README.md
crates/monty-macros/src/: from_args.rs
crates/monty-pool/: Cargo.toml  README.md
crates/monty-pool/src/: checkout.rs  lib.rs  pool.rs  watchdog.rs  worker.rs
crates/monty-pool/tests/: pool_test.rs  websocket.rs
crates/monty-proto/: Cargo.toml  README.md
crates/monty-proto/src/: frame.rs  lib.rs  requirement.rs  wire.rs  worker.rs
crates/monty-proto/tests/: differential.rs  dispatch.rs  frame.rs  roundtrip.rs
crates/monty-python/: Cargo.toml  README.md  build.rs  pyproject.toml
crates/monty-python/python/pydantic_monty/: __init__.py  _monty.pyi  os_access.py
crates/monty-python/src/: async_dispatch.rs  build.rs  convert.rs  dataclass.rs  exceptions.rs  external.rs  lib.rs  limits.rs  monty_cls.rs  mount.rs  pool.rs  print_target.rs  repl.rs  snapshot.rs  version.rs
crates/monty-python/tests/: test_exceptions.py  test_external.py  test_external_async.py  test_feed_start.py  test_inputs.py  test_install_dependencies.py  test_limits.py  test_mount_table.py  test_os_access.py  test_os_access_raw.py  test_print.py  test_start.py  test_types.py  test_websocket.py
crates/monty-runtime/: Cargo.toml  README.md  pyproject.toml
crates/monty-runtime/src/: main.rs  subprocess.rs
crates/monty-runtime/tests/: subprocess.rs
crates/monty-type-checking/: Cargo.toml  README.md
crates/monty-type-checking/src/: lib.rs
crates/monty-type-checking/tests/: good_types.py  main.rs  reveal_types.py  reveal_types_output.txt
crates/monty-types/: Cargo.toml  README.md
crates/monty-types/src/: args.rs  builtins.rs  exceptions.rs  file_mode.rs  format.rs  io.rs  lib.rs  object.rs  os.rs  resource.rs  results.rs  run_options.rs
crates/monty-typeshed/: README.md  update.py
crates/monty-typeshed/custom/: os.pyi
crates/monty-typeshed/src/: lib.rs
crates/monty-wasm-runtime/: Cargo.toml
crates/monty-wasm-runtime/src/: lib.rs
crates/monty-worker/: Cargo.toml
crates/monty-worker/src/: lib.rs
crates/monty-worker/tests/: dispatch.rs
crates/monty/src/: args.rs  asyncio.rs  codecs.rs  exception_private.rs  exception_public.rs  expressions.rs  fstring.rs  function.rs  hash.rs  heap.rs  heap_data.rs  heap_traits.rs  identity.rs  intern.rs  io.rs  lib.rs  object.rs  object_bridge.rs  object_json.rs  os.rs  os_dispatch.rs  parse.rs  prepare.rs  repl.rs  resource.rs  resource_checks.rs  run.rs  run_progress.rs  signature.rs  sorting.rs  source_map.rs  string_builder.rs  value.rs
crates/monty/test_cases/: builtin__math_funcs.py  bytes__methods.py  class__attribute_error.py  class__attrs.py  class__basic.py  class__body_external.py  class__body_raises.py  class__closures.py  class__dynamic_type.py  class__init_async.py  class__init_external.py  class__init_raises.py  class__init_return.py  class__method_raises.py  class__name_error.py  class__repr.py  class__scope.py  class__type_errors.py  collections__counter.py  collections__defaultdict.py  collections__deque.py  collections__namedtuple.py  compare__mixed_types.py  decorator__class.py  decorator__class_body_traceback.py  decorator__class_traceback.py  dict__ops.py  float__mod.py  frozenset__ops.py  import__collections.py  int__overflow_division.py  iter__reentrant.py  iter__sentinel.py  lambda__all.py  list__ops.py  module__dunders.py  open__fs.py  range__ops.py  (+20 more)
examples/web_scraper/: browser.py
limitations/: README.md  assert.md  builtins.md  classes.md  collections.md  exceptions.md  format.md  iter.md  language.md  modules.md  namedtuple.md  open.md  pool-architecture.md  print.md  resource_limits.md  with.md
scripts/: run_traceback.py  test_fixtures.py  websocket_relay.py
(+180 files in other folders)
