[package]
name = "pydantic-monty"
description = "Python bindings for the Monty sandboxed Python interpreter"
readme = "README.md"
# Distributed as a PyO3 extension wheel on PyPI, not as a crate on crates.io.
publish = false
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]
name = "_monty"
# cdylib: the `_monty` Python extension module (the actual deliverable).
# rlib: added only so `monty-cpython` can `use _monty::{convert, dataclass,
# exceptions}` — a `cdylib`-only crate can't be a Rust dependency. This is a
# backwards coupling: the lean embedded-CPython child wants just those three
# value-conversion modules but ends up linking all of `_monty` (and so transitively
# `monty-pool`/`tokio`/`pyo3-async-runtimes`, which it never uses). The clean fix is
# to split the conversion layer into its own leaf crate both can depend on; the rlib
# is the deliberate diff-minimal shortcut until then.
crate-type = ["cdylib", "rlib"]

[dependencies]
ahash = { workspace = true }
monty-pool = { workspace = true }
monty = { workspace = true }
pyo3 = { version = "0.28", features = ["indexmap", "generate-import-lib", "num-bigint"] }
num-bigint = { workspace = true }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["rt", "sync"] }

[build-dependencies]
pyo3-build-config = { version = "0.28", features = ["resolve-config"] }

[features]
# make extensions visible to cargo vendor
extension-module = ["pyo3/generate-import-lib"]
# Forwards `monty`'s `test-hooks` feature for test harness builds.
test-hooks = ["monty/test-hooks"]

[lints]
workspace = true
