[package]
name = "monty-types"
readme = "README.md"
version = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]
name = "monty_types"

[dependencies]
monty-macros = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
chrono = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
unicode-general-category = { workspace = true }

# `std::time::Instant` panics on `wasm32-unknown-unknown`, so the resource
# tracker uses `web_time::Instant` (a `performance.now()`-backed drop-in) there
# to keep `max_duration` working when `monty` is embedded directly in a browser
# wasm module. Only that target needs it; every other target uses std directly.
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
web-time = "1.1"

[features]
# test-hooks exposes small internal helpers needed by integration tests that
# exercise production behavior (e.g. `ResourceTracker::lower_recursion_limit`
# backing `sys.setrecursionlimit`). Forwarded by monty's own `test-hooks`.
test-hooks = []

[lints]
workspace = true
