[package]
name = "monty-worker"
version = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "Transport-agnostic Monty protocol-child state machine, shared by the native subprocess and the wasm worker."
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
monty = { workspace = true }
monty-proto = { workspace = true }
monty-type-checking = { workspace = true }
prost = { workspace = true }

[lints]
workspace = true
